kubernetes/apps/core/iam/namespac.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: iam
  labels:
    istio-injection: enabled
    istio-discovery: enabled
